# Chan_Cpp

./: .clang-format  CMakeLists.txt  README.md  main.cpp
include/: CMakeLists.txt  ChannelBuffer.h  IChannel.h  OChannel.h  chan_utitlity.h  channel.h  circular_buffer.h
src/: CMakeLists.txt
test/: CMakeLists.txt  basic_test.cpp
